crates/jarl-cli/tests/integration/snapshots/integration__assignment_op__assignment_from_toml.snap
---
source: crates/jarl-cli/tests/integration/assignment_op.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [2:1] assignment Use `<-` for assignment.
test.R [4:3] assignment Use `<-` for assignment.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
